=======
CHANGES
=======

0.4.5
=====
- orm
    - when attributes are expired on a pending instance, an 
      error will not be raised when the "refresh" action 
      is triggered and returns no result
      
    - fixed/covered case when using a False value as a 
      polymorphic discriminator
    
    - fixed bug which was preventing synonym() attributes
      from being used with inheritance
        
0.4.4
------
- sql
    - Can again create aliases of selects against textual FROM
      clauses, [ticket:975]

    - The value of a bindparam() can be a callable, in which
      case it's evaluated at statement execution time to get the
      value.

    - Added exception wrapping/reconnect support to result set
      fetching.  Reconnect works for those databases that raise
      a catchable data error during results (i.e. doesn't work
      on MySQL) [ticket:978]

    - Implemented two-phase API for "threadlocal" engine, via
      engine.begin_twophase(), engine.prepare() [ticket:936]

    - Fixed bug which was preventing UNIONS from being
      cloneable, [ticket:986]

    - Added "bind" keyword argument to insert(), update(),
      delete() and DDL(). The .bind property is now assignable
      on those statements as well as on select().

    - Insert statements can now be compiled with extra "prefix"
      words between INSERT and INTO, for vendor extensions like
      MySQL's INSERT IGNORE INTO table.

- orm
    - any(), has(), contains(), ~contains(), attribute level ==
      and != now work properly with self-referential relations -
      the clause inside the EXISTS is aliased on the "remote"
      side to distinguish it from the parent table.  This
      applies to single table self-referential as well as
      inheritance-based self-referential.

    - Repaired behavior of == and != operators at the relation()
      level when compared against NULL for one-to-one relations
      [ticket:985]

    - Fixed bug whereby session.expire() attributes were not